fix(pom): remove PermSize, fix skip flags and vertsion typo